Add StartAPMode to API
